@@ -3,6 +3,7 @@ data:extend({
 	{
 		type = "recipe",
 		name = "BRL-construction-robotics-mk1",
+        category = "electronics-or-handcrafting",
 		enabled = false,
 		allow_quality = true,
 		order = "A[robot]-AA[1-construction-bot]",
@@ -15,6 +16,7 @@ data:extend({
 	{
 		type = "recipe",
 		name = "BRL-construction-robotics-mk2",
+        category = "electronics-or-handcrafting",
 		enabled = false,
 		allow_quality = true,
 		order = "A[robot]-AB[1-construction-bot]",
@@ -28,6 +30,7 @@ data:extend({
 	{
 		type = "recipe",
 		name = "BRL-construction-robotics-mk3",
+        category = "electronics-or-handcrafting",
 		enabled = false,
         allow_quality = true,
 		order = "A[robot]-AC[1-construction-bot]",
@@ -41,6 +44,7 @@ data:extend({
 	{
 		type = "recipe",
 		name = "BRL-construction-robotics-mk4",
+        category = "electronics-or-handcrafting",
 		enabled = false,
         allow_quality = true,
 		order = "A[robot]-AD[1-construction-bot]",
@@ -55,6 +59,7 @@ data:extend({
 	{
 		type = "recipe",
 		name = "BRL-construction-robotics-mk5",
+        category = "electronics-or-handcrafting",
 		enabled = false,
         allow_quality = true,
 		order = "A[robot]-AE[1-construction-bot]",
@@ -69,6 +74,7 @@ data:extend({
 	{
 		type = "recipe",
 		name = "BRL-logistic-robotics-mk1",
+        category = "electronics-or-handcrafting",
 		enabled = false,
 		allow_quality = true,
 		order = "A[robot]-AA[1-logistic-bot]",
@@ -81,6 +87,7 @@ data:extend({
 	{
 		type = "recipe",
 		name = "BRL-logistic-robotics-mk2",
+        category = "electronics-or-handcrafting",
 		enabled = false,
 		allow_quality = true,
 		order = "A[robot]-AB[1-logistic-bot]",
@@ -94,6 +101,7 @@ data:extend({
 	{
 		type = "recipe",
 		name = "BRL-logistic-robotics-mk3",
+        category = "electronics-or-handcrafting",
 		enabled = false,
         allow_quality = true,
 		order = "A[robot]-AC[1-logistic-bot]",
@@ -107,6 +115,7 @@ data:extend({
 	{
 		type = "recipe",
 		name = "BRL-logistic-robotics-mk4",
+        category = "electronics-or-handcrafting",
 		enabled = false,
         allow_quality = true,
 		order = "A[robot]-AD[1-logistic-bot]",
@@ -121,6 +130,7 @@ data:extend({
 	{
 		type = "recipe",
 		name = "BRL-logistic-robotics-mk5",
+        category = "electronics-or-handcrafting",
 		enabled = false,
         allow_quality = true,
 		order = "A[robot]-AE[1-logistic-bot]",
