@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.1
 Date: 0.1.26
+  Features:
+    - New crafting categories added (EM Plant).
   Changes:
     - Internal Code organizing.
 ---------------------------------------------------------------------------------------------------
